Ordenação e filtragem em myvotings e history (não testado)